--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Life Group NWI | Young Adults Small Group in Northwest Indiana</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,8 +11,8 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<h1>We are Life Group.</h1>
+				<p>Life Group NWI is a young adults small group in Northwest Indiana.
 				<br />
 				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			</div>
