--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1>We are Life Group.</h1>
 				<p>Life Group NWI is a young adults small group in Northwest Indiana.
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				</p>
 			</div>
 
 		<!-- Main -->
@@ -34,23 +34,23 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<style class="image icon solid"><img src="/images/pic01.jpg" alt="" /></style>
 						<div class="content">
-							<h3>The First Thing</h3>
+							<h3>Real Talk</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<style href="#" class="image icon solid"><img src="/images/pic02.jpg" alt="" /></style>
 						<div class="content">
-							<h3>The Second Thing</h3>
+							<h3>Real People</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<style href="#" class="image icon solid"><img src="/images/pic03.jpg" alt="" /></style>
 						<div class="content">
-							<h3>The Third Thing</h3>
+							<h3>Real Truth</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
 					</section>
@@ -59,7 +59,7 @@
 
 				<div class="box container">
 					<header>
-						<h2>A lot of generic stuff</h2>
+						<h2>Do you know Jesus Christ?</h2>
 					</header>
 					<section>
 						<header>
@@ -183,22 +183,14 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>Questions?</h2>
 					</header>
 
 					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
 					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
-
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2021. All rights reserved.</li><li>Website Designed by: <a href="https://sagemedia.co/?ref=LifeGroupNWI.com">Sage Media</a></li>
 					</ul>
 
 				</div>
